2024-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add note to 'R-api' site summarizing status

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup action

2024-05-30  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2023-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.7

	* inst/include/tidy/internals.h: Accomodate -Wformat
	-Wformat-security warnings under R-devel by adding format string

	* tests/version.R: Add a test for consistent inst/NEWS.Rd versioning

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2022-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

2022-05-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/snippets/createMatrix.cpp: Example of (numeric) matrix creator

2021-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

	* vignettes/motivation.md: Whitespace tweaks to fix display

2021-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* vignettes/motivation.md: Switch to simplermarkdown
	* DESCRIPTION: Idem
	* vignettes/water.css: Added

2021-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* inst/include/tidy/protect.h (Protect): Assign nullptr in dtor

2021-09-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

2021-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/tidy/protect.h (class Protect): Enable the default
	copy and move assignment and constructor

	* inst/include/tidy/numvec.h (class NumVec): Protect for data object
